# simpl

./: .gitignore  .ocamlformat  .ocamlinit  LICENSE  dune-project  flake.nix
lib/: ast.ml  dune  eval.ml  lexer.mll  parse.ml  parser.mly  typechecker.ml
test/: dune  test_simpl.ml
